syntax = "proto3";

package game;
option go_package = "github.com/42core-team/website_relaunch/k8s-service/pkg/proto";

service GameService {
  rpc CreateGame(CreateGameRequest) returns (Game) {}
  rpc GetGame(GetGameRequest) returns (Game) {}
  rpc StreamGameStatus(GameStatusRequest) returns (stream GameStatus) {}
  rpc StreamLogs(LogRequest) returns (stream LogEntry) {}
}

message CreateGameRequest {
  string name = 1;
  string game_type = 2;
}

message GetGameRequest {
  string game_id = 1;
}

message Game {
  string id = 1;
  string name = 2;
  string game_type = 3;
  string status = 4;
}

message GameStatusRequest {
  string match_id = 1;
  string team_id = 2;
}

message GameStatus {
  string match_id = 1;
  string team_id = 2;
  string status = 3;
  int32 players_connected = 4;
  string current_state = 5;
}

message LogRequest {
  string match_id = 1;
  string team_id = 2;
}

message LogEntry {
  string match_id = 1;
  string team_id = 2;
  string timestamp = 3;
  string message = 4;
  string level = 5;
} 