syntax = "proto3";

option go_package = "github.com/42core-team/website_relaunch/k8s-service";

enum GameStatus {
    UNKNOWN = 0;
    CREATED = 1;
    IN_PROGRESS = 2;
    COMPLETED = 3;
    ABORTED = 4;
}

message PlayerLog {
    string player_id = 1;
    string message = 2;
    int64 timestamp = 3;
}

message GameLog {
    string game_id = 1;
    string message = 2;
    int64 timestamp = 3;
}

service GameService {
    rpc CreateGame(CreateGameRequest) returns (CreateGameResponse) {}
    rpc GetGame(GetGameRequest) returns (GetGameResponse) {}
    rpc SubscribeToGameStatus(GameStatusRequest) returns (stream GameStatusResponse) {}
    rpc GetPlayerLogs(PlayerLogsRequest) returns (stream PlayerLog) {}
    rpc GetGameLogs(GameLogsRequest) returns (stream GameLog) {}
}

message CreateGameRequest {
    repeated string player_ids = 1;
}

message CreateGameResponse {
    string game_id = 1;
    GameStatus status = 2;
}

message GetGameRequest {
    string game_id = 1;
}

message GetGameResponse {
    Game game = 1;
}

message GameStatusRequest {
    string game_id = 1;
}

message GameStatusResponse {
    string game_id = 1;
    GameStatus status = 2;
    int64 updated_at = 3;
}

message PlayerLogsRequest {
    string game_id = 1;
    string player_id = 2;
    int64 from_timestamp = 3;
}

message GameLogsRequest {
    string game_id = 1;
    int64 from_timestamp = 2;
}

message Game {
    string game_id = 1;
    GameStatus status = 2;
    repeated string player_ids = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
}
